force-app/main/default/objects/RiskProfile__c/RiskProfile__c.object-meta.xml
<CustomObject>
    <label>Risk Profile</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>