force-app/main/default/objects/RiskProfile__c/fields/AccountFirm__c.field-meta.xml
<CustomField>
    <fullName>AccountFirm__c</fullName>
    <label>Company/Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Risk Profiles</relationshipLabel>
    <relationshipName>Risk_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>