force-app/main/default/objects/RiskProfile__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>28-35 = Likely to Renew</fullName>
            </value>
            <value>
                <fullName>20-27 = Strategy &amp; Action Plan</fullName>
            </value>
            <value>
                <fullName>19 and below = CBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>