force-app/main/default/objects/RiskProfile__c/fields/AdditionalInformation1__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformation1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Information 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>