force-app/main/default/objects/RiskProfile__c/fields/Aetna_Cigna_Anthem_Relationship_Comments__c.field-meta.xml
<CustomField>
    <fullName>Aetna_Cigna_Anthem_Relationship_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aetna-Cigna-Anthem Relationship Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>