force-app/main/default/objects/RiskProfile__c/fields/Aetna_Cigna_Anthem_Relationship_w_Client__c.field-meta.xml
<CustomField>
    <fullName>Aetna_Cigna_Anthem_Relationship_w_Client__c</fullName>
    <label>Aetna-Cigna-Anthem Relationship w/Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>