force-app/main/default/objects/RiskProfile__c/fields/B2B_Spend_Increasing_Decreasing__c.field-meta.xml
<CustomField>
    <fullName>B2B_Spend_Increasing_Decreasing__c</fullName>
    <label>B2B Spend Increasing/Decreasing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decreasing</fullName>
            </value>
            <value>
                <fullName>Increasing</fullName>
            </value>
            <value>
                <fullName>Enough to mitigate risk of term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>