force-app/main/default/objects/RiskProfile__c/fields/Bi_Wkly_Partnership_Call_Occur_Regularly__c.field-meta.xml
<CustomField>
    <fullName>Bi_Wkly_Partnership_Call_Occur_Regularly__c</fullName>
    <label>Bi-Wkly Partnership Call Occur Regularly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>