force-app/main/default/objects/RiskProfile__c/fields/BiC_Position_in_Top_Markets__c.field-meta.xml
<CustomField>
    <fullName>BiC_Position_in_Top_Markets__c</fullName>
    <label>BiC Position in Top Markets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advantage</fullName>
            </value>
            <value>
                <fullName>Within 1%</fullName>
            </value>
            <value>
                <fullName>Disadvantage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>