force-app/main/default/objects/RiskProfile__c/fields/Change_in_Consultant_Since_Last_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Consultant_Since_Last_Renewal__c</fullName>
    <label>Change in Consultant Since Last Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>