force-app/main/default/objects/RiskProfile__c/fields/Current_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Current_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Risk Profiles</relationshipLabel>
    <relationshipName>Risk_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>