force-app/main/default/objects/RiskProfile__c/fields/Current_Consultant_Company__c.field-meta.xml
<CustomField>
    <fullName>Current_Consultant_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Consultant (Company)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Risk Profiles</relationshipLabel>
    <relationshipName>Risk_Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>