force-app/main/default/objects/RiskProfile__c/fields/DateRiskAdded__c.field-meta.xml
<CustomField>
    <fullName>DateRiskAdded__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Risk Added</label>
    <type>Date</type>
</CustomField>