force-app/main/default/objects/RiskProfile__c/fields/DateRiskClosed__c.field-meta.xml
<CustomField>
    <fullName>DateRiskClosed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Risk Closed</label>
    <type>Date</type>
</CustomField>