force-app/main/default/objects/RiskProfile__c/fields/DateRiskModified__c.field-meta.xml
<CustomField>
    <fullName>DateRiskModified__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Risk Modified</label>
    <type>Date</type>
</CustomField>