force-app/main/default/objects/RiskProfile__c/fields/Does_Consultant_Utilize_Discount_Tools__c.field-meta.xml
<CustomField>
    <fullName>Does_Consultant_Utilize_Discount_Tools__c</fullName>
    <label>Does Consultant Utilize Discount Tools</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>