force-app/main/default/objects/RiskProfile__c/fields/ExternalUniqueID__c.field-meta.xml
<CustomField>
    <fullName>ExternalUniqueID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Unique ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>