force-app/main/default/objects/RiskProfile__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Impact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>