force-app/main/default/objects/RiskProfile__c/fields/Integrated_Products_Comments__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Products_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integrated Products Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>