force-app/main/default/objects/RiskProfile__c/fields/Is_Procurement_at_the_Table__c.field-meta.xml
<CustomField>
    <fullName>Is_Procurement_at_the_Table__c</fullName>
    <label>Is Procurement at the Table</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>