force-app/main/default/objects/RiskProfile__c/fields/Is_UHC_Offered_in_a_Slice_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Is_UHC_Offered_in_a_Slice_Arrangement__c</fullName>
    <label>Is UHC Offered in a Slice Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>