force-app/main/default/objects/RiskProfile__c/fields/Last_In_Person_Touchpoint_Within_3_Mnths__c.field-meta.xml
<CustomField>
    <fullName>Last_In_Person_Touchpoint_Within_3_Mnths__c</fullName>
    <label>Last In-Person Touchpoint Within 3 Mnths</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>