force-app/main/default/objects/RiskProfile__c/fields/Last_Renewal_Proactive_or_RFP__c.field-meta.xml
<CustomField>
    <fullName>Last_Renewal_Proactive_or_RFP__c</fullName>
    <label>Last Renewal Proactive or RFP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proactive</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>