force-app/main/default/objects/RiskProfile__c/fields/Member_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Member_NPS_Score__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member NPS Score</label>
    <length>40</length>
    <type>Text</type>
</CustomField>