force-app/main/default/objects/RiskProfile__c/fields/Merger_Acquisition_Since_Last_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Merger_Acquisition_Since_Last_Renewal__c</fullName>
    <label>Merger/Acquisition Since Last Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>