force-app/main/default/objects/RiskProfile__c/fields/Number_of_Integrated_Products_with_UHC__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Integrated_Products_with_UHC__c</fullName>
    <label>Number of Integrated Products with UHC</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>