force-app/main/default/objects/RiskProfile__c/fields/Ongoing_Service_Issues__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Service_Issues__c</fullName>
    <label>Ongoing Service Issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>