force-app/main/default/objects/RiskProfile__c/fields/Projected_to_Miss_or_Meeting_CTG__c.field-meta.xml
<CustomField>
    <fullName>Projected_to_Miss_or_Meeting_CTG__c</fullName>
    <label>Projected to Miss or Meeting CTG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>