force-app/main/default/objects/RiskProfile__c/fields/RawScore__c.field-meta.xml
<CustomField>
    <fullName>RawScore__c</fullName>
    <label>Raw Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>