force-app/main/default/objects/RiskProfile__c/fields/RiskFactorasof__c.field-meta.xml
<CustomField>
    <fullName>RiskFactorasof__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Factor as of</label>
    <length>50</length>
    <type>Text</type>
</CustomField>