force-app/main/default/objects/RiskProfile__c/fields/RiskFactorValue__c.field-meta.xml
<CustomField>
    <fullName>RiskFactorValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Factor Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>