force-app/main/default/objects/RiskProfile__c/fields/RiskProfileType__c.field-meta.xml
<CustomField>
    <fullName>RiskProfileType__c</fullName>
    <label>Risk Profile Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Risk Tracked by SCE</fullName>
            </value>
            <value>
                <fullName>Additional Risk Factor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>