force-app/main/default/objects/RiskProfile__c/fields/RiskScore__c.field-meta.xml
<CustomField>
    <fullName>RiskScore__c</fullName>
    <label>Risk Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>