force-app/main/default/objects/RiskProfile__c/fields/SCERiskTypeAddlRiskFactorType__c.field-meta.xml
<CustomField>
    <fullName>SCERiskTypeAddlRiskFactorType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SCE Risk Type/Addl Risk Factor Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>