force-app/main/default/objects/RiskProfile__c/fields/Slice_Arrangement_Comments__c.field-meta.xml
<CustomField>
    <fullName>Slice_Arrangement_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Slice Arrangement Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>