force-app/main/default/objects/RiskProfile__c/fields/Trend_Most_Recent_Year__c.field-meta.xml
<CustomField>
    <fullName>Trend_Most_Recent_Year__c</fullName>
    <label>Trend (Most Recent Year)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+3 trend</fullName>
            </value>
            <value>
                <fullName>0-3</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>