force-app/main/default/objects/RiskProfile__c/fields/UHC_Competitor_on_BoD_Interact_w_CSuite__c.field-meta.xml
<CustomField>
    <fullName>UHC_Competitor_on_BoD_Interact_w_CSuite__c</fullName>
    <label>UHC-Competitor on BoD Interact w/ CSuite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comp</fullName>
            </value>
            <value>
                <fullName>UHC</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>