force-app/main/default/objects/RiskProfile__c/fields/WeightMultiplier__c.field-meta.xml
<CustomField>
    <fullName>WeightMultiplier__c</fullName>
    <label>Weight Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>