force-app/main/default/objects/RiskProfile__c/recordTypes/Client_Scorecard.recordType-meta.xml
<RecordType>
    <fullName>Client_Scorecard</fullName>
    <active>true</active>
    <label>Client Scorecard</label>
</RecordType>