force-app/main/default/objects/RiskProfile__c/recordTypes/Risk_Profile.recordType-meta.xml
<RecordType>
    <fullName>Risk_Profile</fullName>
    <active>true</active>
    <label>Risk Profile</label>
</RecordType>