force-app/main/default/objects/RiskProfile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountFirm__c</columns>
    <columns>RiskProfileType__c</columns>
    <columns>SCERiskTypeAddlRiskFactorType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>