force-app/main/default/objects/RiskProfile__c/listViews/Client_Scorecard.listView-meta.xml
<ListView>
    <fullName>Client_Scorecard</fullName>
    <columns>NAME</columns>
    <columns>AccountFirm__c</columns>
    <columns>Current_Consultant_Company__c</columns>
    <columns>Total_Score__c</columns>
    <columns>Action__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RiskProfile__c.Client_Scorecard</value>
    </filters>
    <label>Client Scorecard</label>
</ListView>